Added empty messages in added class field and re-aligned the buttons.

--- a/gpacalculator.html
+++ b/gpacalculator.html
@@ -5,11 +5,12 @@
 <script src="https://code.jquery.com/mobile/1.5.0-rc1/jquery.mobile-1.5.0-rc1.min.js"></script>
 <link rel="stylesheet" type="text/css" href="gpacalculator.css">
 
+
 </head>
 <body>
 <h1>GPA Calculator</h1>
 <h1 id="greeting">Hello!</h1>
-<div class="container">
+
 <div class="jumbotron">
 <h2>Enter Grades Below</h2>
 <form class="form-inline">
@@ -25,7 +26,7 @@
         <option name="fiveCred">5 Credits</option>
         <option name="sixCred">6 Credits</option>
       </select>
-  
+
       <select class="form-control insertionpoint">
         <option name="A">A</option>
         <option name="Aminus">A-</option>
@@ -40,18 +41,31 @@
         <option name="Dminus">D-</option>
         <option name="F">F</option>
       </select>
-      
-      
-    <div class="form-group">
-    <div class="col-md-4">
-    <button id="add-more" name="add-more" class="btn btn-primary mb-2">Add Classes</button>
-    <button class="btn btn-primary mb-2" onclick="calculate()">Calculate</button>
-    </div>
-</div></div>  
-</form>
 
+        <div class="container">
+    <div class="form-group">
+    <div class="mb1">
+    <button id="add-more" name="add-more" class="btn btn-primary mb-2" style="margin:10px;" onclick="emptyField()">Add Classes</button>
+        <script>
+    function emptyField(){
+        if(document.getElementById("inlineFormInputName2").value == ""){
+
+            alert("Empty class name!");
+        }else{
+                alert("Your class has been added successfully!");
+        }
+        }
+
+    </script>
+            <button class="btn btn-primary mb-2" style="margin:10px;" onclick="calculate()">Calculate</button>
+    </div>
+    </div>
+</div></div>
+</form>
 <script src="gpacalculator.js"></script>
 
+
+</div>
 </body>
 </html>
 
