--- a/gpacalculator.html
+++ b/gpacalculator.html
@@ -5,7 +5,6 @@
 <script src="https://code.jquery.com/mobile/1.5.0-rc1/jquery.mobile-1.5.0-rc1.min.js"></script>
 <link rel="stylesheet" type="text/css" href="gpacalculator.css">
 
-
 </head>
 <body>
 <h1>GPA Calculator</h1>
@@ -14,57 +13,19 @@
 <div class="jumbotron">
 <h2>Enter Grades Below</h2>
 <form class="form-inline">
-    <div id="field">
-    <label class="sr-only" for="inlineFormInputName2">Name</label>
-    <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="Class Name">
 
-    <select class="form-control">
-        <option name="oneCred">1 Credit</option>
-        <option name="twoCred">2 Credits</option>
-        <option name="threeCred">3 Credits</option>
-        <option name="fourCred">4 Credits</option>
-        <option name="fiveCred">5 Credits</option>
-        <option name="sixCred">6 Credits</option>
-      </select>
-
-      <select class="form-control insertionpoint">
-        <option name="A">A</option>
-        <option name="Aminus">A-</option>
-        <option name="Bplus">B+</option>
-        <option name="B">B</option>
-        <option name="Bminus">B-</option>
-        <option name="Cplus">C+</option>
-        <option name="C">C</option>
-        <option name="Cminus">C-</option>
-        <option name="Dplus">D+</option>
-        <option name="D">D</option>
-        <option name="Dminus">D-</option>
-        <option name="F">F</option>
-      </select>
-
-        <div class="container">
-    <div class="form-group">
-    <div class="mb1">
-    <button id="add-more" name="add-more" class="btn btn-primary mb-2" style="margin:10px;" onclick="emptyField()">Add Classes</button>
-        <script>
-    function emptyField(){
-        if(document.getElementById("inlineFormInputName2").value == ""){
-
-            alert("Empty class name!");
-        }else{
-                alert("Your class has been added successfully!");
-        }
-        }
-
-    </script>
-            <button class="btn btn-primary mb-2" style="margin:10px;" onclick="calculate()">Calculate</button>
-    </div>
-    </div>
-</div></div>
+        <input type="text" class="form-control mb-2 mr-sm-2" id="cName" placeholder="Class Name">
+        <input type="number" id="cr" placeholder="Enter Credit" class="form-control">
+        <input type="number" id="gradePercent" placeholder="Enter Grade %" class="form-control">
 </form>
+
+    <button id="add-more" name="add-more" class="btn btn-primary mb-2" style="margin:10px;" onclick="addClasses()">Add Classes</button>
+
+    <button class="btn btn-primary mb-2" style="margin:10px;" onclick="display()">Calculate</button>
+    <button class="btn btn-primary mb-2" style="margin:10px;" onclick="refreshElement()">reset</button>
+        <p id="error"><p>
+
 <script src="gpacalculator.js"></script>
-
-
 </div>
 </body>
 </html>
