Updated output messages and completed project requirement.

--- a/gpacalculator.html
+++ b/gpacalculator.html
@@ -25,6 +25,9 @@
     <button class="btn btn-primary mb-2" style="margin:10px;" onclick="refreshElement()">reset</button>
         <p id="error"><p>
 
+        <p id="GPA"></p>
+        <p id = "creditsLeft"></p>
+        <p id = "Time"></p>
 <script src="gpacalculator.js"></script>
 </div>
 </body>
