--- a/gpacalculator.html
+++ b/gpacalculator.html
@@ -2,48 +2,65 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<script src="https://code.jquery.com/mobile/1.5.0-rc1/jquery.mobile-1.5.0-rc1.min.js"></script>
 <link rel="stylesheet" type="text/css" href="gpacalculator.css">
 
 </head>
 <body>
+<br><br>
 <h1>GPA Calculator</h1>
+<br>
 <h1 id="greeting">Hello!</h1>
+<br>
 <div class="container">
 <div class="jumbotron">
 <h2>Enter Grades Below</h2>
 <form class="form-inline">
+    <div class="field" id="field">
+    <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="Class Name">
 
-        <input type="text" class="form-control mb-2 mr-sm-2" id="cName" placeholder="Class Name">
-<select id="credits" name="credits" class="form-control mb-2 mr-sm-2">
-  <option value="1">1 Credit</option>
-  <option value="2">2 Credit</option>
-  <option value="3">3 Credit</option>
-  <option value="4">4 Credit</option>
-  <option value="5">5 Credit</option>
-  <option value="6">6 Credit</option>
-</select>
-<select id="grades" name="grades" class="form-control mb-2 mr-sm-2">
-  <option value="4">A</option>
-  <option value="3">B</option>
-  <option value="2">C</option>
-  <option value="1">D</option>
-  <option value="0">F</option>
-</select>
+    <select class="form-control" name="classInputs">
+        <option value="1">1 Credit</option>
+        <option value="2">2 Credits</option>
+        <option value="3">3 Credits</option>
+        <option value="4">4 Credits</option>
+        <option value="5">5 Credits</option>
+        <option value="6">6 Credits</option>
+      </select>
+  
+      <select class="form-control" name="classInputs">
+        <option value="4.0">A</option>
+        <option value="3.7">A-</option>
+        <option value="3.3">B+</option>
+        <option value="3.0">B</option>
+        <option value="2.7">B-</option>
+        <option value="2.3">C+</option>
+        <option value="2.0">C</option>
+        <option value="1.7">C-</option>
+        <option value="1.3">D+</option>
+        <option value="1.0">D</option>
+        <option value="0.0">F</option>
+      </select>
+    </div>
+    <br>
+    <div class="newField" id="newField"></div>
+    <div class="form-group">
+    <div class="col-md-12">
+    <button id="add-more" name="add-more" class="btn btn-primary mb-2">Add Classes</button>
+    <button id="calcButton" name="calcButton" class="btn btn-primary mb-2">Calculate</button>
+    </div>
+</div></div>
+<h3 id="calculatedGPA" name="calculatedGPA">GPA: </h3>  
+<br>
+<h3 id="creditsleft" name="creditsleft">Credits Required for Degree: </h3>
 </form>
 
-<button id="add-more" name="add-more" class="btn btn-primary mb-2" style="margin:10px;" onclick="addClasses()">Add Classes</button>
-</br>
-<textarea id="list" rows="10" cols="80" readonly>
-    No Classes Added yet.
-</textarea>
-   </br>
 
-    <button class="btn btn-primary mb-2" style="margin:10px;" onclick="display()">Calculate</button>
-    <button class="btn btn-primary mb-2" style="margin:10px;" onclick="reset()">reset</button>
-        <p id="error"><p>
-
+<script
+  src="https://code.jquery.com/jquery-3.4.1.js"
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
 <script src="gpacalculator.js"></script>
-</div></div>
+
 </body>
 </html>
+
